force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Payment &amp; Invoice</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Order Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments &amp; Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>