force-app/main/default/objects/Order__c/fields/Billing_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_address__c</fullName>
    <label>Billing address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>