force-app/main/default/objects/Order__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Payments &amp; Invoices</relationshipLabel>
    <relationshipName>Payments_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>