force-app/main/default/objects/Order__c/fields/Event_Registration_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Sub_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to specify group during group registration on congress event</description>
    <label>Event Registration Sub Group</label>
    <referenceTo>Event_Registration_Sub_Group__c</referenceTo>
    <relationshipLabel>Payments &amp; Invoices</relationshipLabel>
    <relationshipName>Payments_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>