force-app/main/default/objects/Order__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>