force-app/main/default/objects/Order__c/fields/Order_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Closed_Date__c</fullName>
    <label>Order Closed Date</label>
    <type>Date</type>
</CustomField>