force-app/main/default/objects/Order__c/fields/Payment_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payment_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Payment Invoice when canceled</description>
    <label>Parent Payment Invoice</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Payments &amp; Invoices</relationshipLabel>
    <relationshipName>Payments_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>