force-app/main/default/objects/Order__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <label>Total amount</label>
    <summarizedField>Order_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order_Custom__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>