force-app/main/default/objects/Order__c/fields/Total_amount_Gros__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Gros__c</fullName>
    <formula>Total_amount__c + VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Gros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>