force-app/main/default/objects/Order__c/fields/Total_Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Net__c</fullName>
    <formula>Total_amount__c - (Total_amount__c / (1 + VAT_Rate__c) * VAT_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>