force-app/main/default/objects/Order__c/fields/Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Request</label>
    <referenceTo>Transfer_Request__c</referenceTo>
    <relationshipLabel>Payments &amp; Invoices</relationshipLabel>
    <relationshipName>Payments_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>