force-app/main/default/objects/Order__c/fields/VATamount__c.field-meta.xml
<CustomField>
    <fullName>VATamount__c</fullName>
    <formula>Total_amount__c -  Total_Amount_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>