force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Total_amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Purchase_Type__c</columns>
    <columns>Event_custom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>