force-app/main/default/objects/Order__c/listViews/Invoices_This_Week.listView-meta.xml
<ListView>
    <fullName>Invoices_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Purchase_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Invoices This Week</label>
</ListView>